authentik-ns.yml
kind: Namespace
apiVersion: v1
metadata:
  name: authentik
  annotations:
    linkerd.io/inject: enabled
