authentik-redis-statefulset-patch.yml
---
# Source: authentik/charts/redis/templates/master/statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: authentik-redis-master
  namespace: "authentik"
  annotations:
    keel.sh/policy: force
    keel.sh/trigger: poll
    keel.sh/pollSchedule: "@hourly"
    keel.sh/match-tag: true
spec:
  template:
    spec:
      volumes:
      - name: redis-data
        persistentVolumeClaim:
          claimName: redis-data
      containers:
       - name: redis
         resources:
           limits:
             memory: 128Mi
           requests:
             memory: 64Mi
