authentik-server-deploy-patch.yml
---
# Source: authentik/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: authentik-server
spec:
  template:
    spec:
      containers:
        - name: authentik
          volumeMounts:
            - name: authentik-secrets
              mountPath: "/mnt/vault"
              readOnly: true
          resources:
            limits:
              memory: 512Mi
            requests:
              memory: 400Mi
      volumes:
      - name: authentik-secrets
        csi:
          driver: "secrets-store.csi.k8s.io"
          readOnly: true
          volumeAttributes:
            secretProviderClass: "authentik"
