authentik-worker-deploy-patch.yml
---
# Source: authentik/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: authentik-worker
spec:
  template:
    spec:
      containers:
        - name: authentik
          resources:
            limits:
              memory: 1024Mi
            requests:
              memory: 256Mi
          volumeMounts:
            - name: authentik-secrets
              mountPath: "/mnt/vault"
              readOnly: true
      volumes:
      - name: authentik-psql
        persistentVolumeClaim:
          claimName: authentik-psql
      - name: authentik-secrets
        csi:
          driver: "secrets-store.csi.k8s.io"
          readOnly: true
          volumeAttributes:
            secretProviderClass: "authentik"
