psql-deploy.yml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: psql
  labels:
    app: psql
    part-of: authentik
  annotations:
    keel.sh/policy: force
    keel.sh/trigger: poll
    keel.sh/pollSchedule: "@hourly"
    keel.sh/match-tag: true
spec:
  replicas: 1
  selector:
    matchLabels:
      app: psql
      part-of: authentik
  template:
    metadata:
      labels:
        app: psql
        part-of: authentik
    spec:
      serviceAccountName: authentik
      containers:
      - name: psql
        image: postgres:latest
        ports:
        - name: psql
          containerPort: 5432
        volumeMounts:
        - name: authentik-psql
          mountPath: /var/lib/postgresql/data
        - name: authentik-secrets
          mountPath: "/mnt/vault"
          readOnly: true
        resources:
          limits:
            memory: 128Mi
          requests:
            memory: 64Mi
      volumes:
      - name: authentik-psql
        persistentVolumeClaim:
          claimName: authentik-psql
      - name: authentik-secrets
        csi:
          driver: "secrets-store.csi.k8s.io"
          readOnly: true
          volumeAttributes:
            secretProviderClass: "authentik"
