psql-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: psql
spec:
  type: ClusterIP
  ports:
    - port: 5432
      targetPort: psql
  selector:
    app: psql
    part-of: authentik
