authentik-ing.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: authentik
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/secure-backends: "true"
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
  - host: <path:apps-kv/data/authentik/config#HOST>
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: authentik
            port:
              number: 80
      - path: /akprox
        pathType: Prefix
        backend:
          service:
            name: ak-outpost-authentik-embedded-outpost
            port:
              number: 9000

  tls:
  - hosts:
    - <path:apps-kv/data/authentik/config#HOST>
